--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
     <main>
         <div class="blocco-1">
-            <div class="containerr-block1">
+            <div class="container-block1">
                 <img src="img/phone.png" alt="">
                 <ul class="container-card-block1">
                        <li><h3>Get a demo application</h3></li>
